--- a/README
+++ b/README
@@ -10,35 +10,35 @@ The numbers used for intergalactic transactions follows similar convention to th
 
 Roman numerals are based on seven symbols:
 
-Symbol/Value
-I 1
-V 5
-X 10
-L 50
-C 100
-D 500
-M 1,000
+romanNumerals.RomanNumeral/Value
+romanNumerals.I 1
+romanNumerals.V 5
+romanNumerals.X 10
+romanNumerals.L 50
+romanNumerals.C 100
+romanNumerals.D 500
+romanNumerals.M 1,000
 
 Numbers are formed by combining symbols together and adding the values. For example, MMVI is 1000 + 1000 + 5 + 1 = 2006. Generally,
 symbols are placed in order of value, starting with the largest values. When smaller values precede larger values, the smaller values
 are subtracted from the larger values, and the result is added to the total.
 For example MCMXLIV = 1000 + (1000 − 100) + (50 − 10) + (5 − 1) = 1944.
 
-· The symbols "I", "X", "C", and "M" can be repeated three times in succession, but no more.
+· The symbols "romanNumerals.I", "romanNumerals.X", "romanNumerals.C", and "romanNumerals.M" can be repeated three times in succession, but no more.
 They may appear four times if the third and fourth are separated by a smaller value, such as XXXIX.)
-. "D", "L", and "V" can never be repeated.
+. "romanNumerals.D", "romanNumerals.L", and "romanNumerals.V" can never be repeated.
 
-· "I" can be subtracted from "V" and "X" only.
-. "X" can be subtracted from "L" and "C" only.
-. "C" can be subtracted from "D" and "M" only.
-. "V", "L", and "D" can never be subtracted.
+· "romanNumerals.I" can be subtracted from "romanNumerals.V" and "romanNumerals.X" only.
+. "romanNumerals.X" can be subtracted from "romanNumerals.L" and "romanNumerals.C" only.
+. "romanNumerals.C" can be subtracted from "romanNumerals.D" and "romanNumerals.M" only.
+. "romanNumerals.V", "romanNumerals.L", and "romanNumerals.D" can never be subtracted.
 
-· Only one small-value symbol may be subtracted from any large-value symbol.
+· Only one small-value romanNumeral may be subtracted from any large-value romanNumeral.
 
 
 · A number written in [16]Arabic numerals can be broken into digits. For example, 1903 is composed of 1, 9, 0, and 3. To write the Roman
 numeral, each of the non-zero digits should be treated separately.
-In the above example, 1,000 = M, 900 = CM, and 3 = III. Therefore, 1903 = MCMIII.
+In the above example, 1,000 = romanNumerals.M, 900 = CM, and 3 = III. Therefore, 1903 = MCMIII.
 (Source: Wikipedia ( [17]http://en.wikipedia.org/wiki/Roman_numerals)
 
 Input to your program consists of lines of text detailing your notes on the conversion between intergalactic units and roman numerals.
@@ -46,10 +46,10 @@ Input to your program consists of lines of text detailing your notes on the conv
 You are expected to handle invalid queries appropriately.
 
 Test input:
-glob is I
-prok is V
-pish is X
-tegj is L
+glob is romanNumerals.I
+prok is romanNumerals.V
+pish is romanNumerals.X
+tegj is romanNumerals.L
 glob glob Silver is 34 Credits
 glob prok Gold is 57800 Credits
 pish pish Iron is 3910 Credits
@@ -64,4 +64,4 @@ pish tegj glob glob is 42
 glob prok Silver is 68 Credits
 glob prok Gold is 57800 Credits
 glob prok Iron is 782 Credits
-I have no idea what you are talking about
+romanNumerals.I have no idea what you are talking about
